[gd_scene load_steps=3 format=2]

[ext_resource path="res://custom_nodes/Key/Key.gd" type="Script" id=1]
[ext_resource path="res://fonts/basis33/basis33_32.tres" type="DynamicFont" id=2]

[node name="Key" type="TextureButton"]
margin_right = 24.0
margin_bottom = 144.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="Audio" type="AudioStreamPlayer" parent="."]

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -4.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 2

[connection signal="button_down" from="." to="." method="_on_Key_button_down"]
[connection signal="button_up" from="." to="." method="_on_Key_button_up"]
[connection signal="gui_input" from="." to="." method="_on_Key_gui_input"]
